--- a/src/main/resources/templates/scr.html
+++ b/src/main/resources/templates/scr.html
@@ -10,13 +10,13 @@
 <h1>Wydział Elektroniki</h1>
 <h3>Seminarium SCR Systemy Operacyjne</h3>
 <b>Tytuł:</b> Współbieżność w językach wysokiego poziomu na przykładzie Javy
-<br>
+<br/>
 <b>Autor:</b> Paweł Cembaluk
-<br>
+<br/>
 <b>Data prezentacji: </b> 11.12.2019
-<br>
+<br/>
 </p>
-<hr>
+<hr/>
 <p>
 <h2>Spis treści</h2>
 <ol>
@@ -78,7 +78,7 @@
     </h3>
 </ol>
 </p>
-<hr>
+<hr/>
 <p>
 <h2>Bibliografia</h2>
 <ul>
@@ -97,7 +97,7 @@
     </li>
 </ul>
 </p>
-<hr>
-<br><a th:href="@{/}">Home</a>
+<hr/>
+<br/><a th:href="@{/}">Home</a>
 </body>
 </html>
