--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,6 +7,8 @@
 <body>
 <h1>Welcome to...</h1>
 <img th:src="@{/images/TacoCloud.png}"/>
-<br><a th:href="@{/scr}">SCR Systemy Operacyjne</a>
+<br/><a th:href="@{/design}"><h2>Design a new taco!</h2></a>
+<hr/>
+<br/><a th:href="@{/scr}">SCR Systemy Operacyjne</a>
 </body>
 </html>
