--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -71,5 +71,12 @@
     <input type="submit" value="Submit order"/>
 
 </form>
+
+<!--TODO: Check if user is logged in.-->
+<hr/>
+<form method="POST" th:action="@{/logout}">
+    <input type="submit" value="Logout"/>
+</form>
+
 </body>
 </html>
