--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -9,7 +9,7 @@
 <h1>Design your taco!</h1>
 <img th:src="@{/images/TacoCloud.png}"/>
 
-<form method="post" th:object="${design}">
+<form method="post" th:action="@{/design}" th:object="${design}">
 
     <div class="grid">
 
@@ -67,9 +67,16 @@
         <input type="text" th:field="*{name}"/>
         <span class="validationError" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">ERROR MESSAGE</span>
         <br/>
-        <button>Submit your taco</button>
+        <input type="submit" value="Submit order"/>
     </div>
 
 </form>
+
+<!--TODO: Check if user is logged in.-->
+<hr/>
+<form method="POST" th:action="@{/logout}">
+    <input type="submit" value="Logout"/>
+</form>
+
 </body>
 </html>
