--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Taco Cloud</title>
+    <link rel="stylesheet" th:href="@{/styles.css}">
 </head>
 <body>
-<h1>Welcome to...</h1>
+<h1>Welcome to...
+    <div class="login-logout-button" sec:authorize="!isAuthenticated()">
+        <form method="get" th:action="@{/login}">
+            <input type="submit" value="Login"/>
+        </form>
+    </div>
+    <div class="login-logout-button" sec:authorize="isAuthenticated()">
+        <form method="post" th:action="@{/logout}">
+            <input type="submit" value="Logout"/>
+        </form>
+    </div>
+</h1>
 <img th:src="@{/images/TacoCloud.png}"/>
 <br/><a th:href="@{/design}"><h2>Design a new taco!</h2></a>
 <hr/>
 <br/><a th:href="@{/scr}">SCR Systemy Operacyjne</a>
-
-<!--TODO: Check if user is logged in.-->
-<hr/>
-<form method="POST" th:action="@{/logout}">
-    <input type="submit" value="Logout"/>
-</form>
 
 </body>
 </html>
